--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <title>Hello World</title>
     <body>
-        <h1>Hello Class</h1>
+        <h1>Hello Class!</h1>
         <p>Learning how to use visual studio code!</p>
+        <p>Adding new content to my site.</p>
     </body>
 </html>
