--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <h1>Hello Class!</h1>
         <p>Learning how to use visual studio code!</p>
         <p>Adding new content to my site.</p>
+        <p>Making another change in new branch.</p>
     </body>
 </html>
